--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,17 +22,51 @@
     </string>
 
     <!-- 控件文本-->
-    <string name="input_username">请输入您的用户名</string>
-    <string name="input_password">请输入您的密码</string>
+    <string name="username">用户名</string>
+    <string name="password">密码</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="phone">手机号</string>
+    <string name="real_name">真实姓名</string>
+    <string name="sex">性别</string>
+    <string name="male">男</string>
+    <string name="female">女</string>
+    <string name="id_num">身份证号</string>
+    <string name="license_num">驾驶证号</string>
     <string name="register">注册</string>
     <string name="login">登录</string>
+    <string name="back_to_login">返回登录</string>
     <string name="forget_password">忘记密码？</string>
     <string name="passenger">乘客</string>
     <string name="driver">司机</string>
     <string name="carpool">拼车</string>
     <string name="user">用户</string>
     <string name="nearby">附近</string>
+    <string name="next_step">下一步</string>
+    <string name="reg_time">注册日期</string>
+    <string name="update">修改</string>
+    <string name="confirm">确定</string>
+    <string name="personal_info">个人信息</string>
+
+    <!-- 反馈提示 -->
+    <string name="no_user">用户不存在</string>
+    <string name="wrong_password">密码错误</string>
+    <string name="no_phone">该手机号未注册</string>
+    <string name="exist_phone">该手机号已被注册</string>
+    <string name="register_success">注册成功</string>
+    <string name="login_success">登录成功</string>
+    <string name="server_connect_fail">服务器连接失败</string>
+    <string name="unknown_error">未知错误</string>
 
     <!-- 服务器地址 -->
-    <string name="server_addr">http://47.99.75.250:8080/CarpoolServer/</string>
+    <string name="server_addr">http://47.99.75.250:8080/Carpool/</string>
+    <string name="passenger_login">PLoginAction</string>
+    <string name="driver_login">DLoginAction</string>
+    <string name="passenger_register">PassengerRegister</string>
+    <string name="driver_register">DriverRegister</string>
+    <string name="passenger_update">PassengerUpdate</string>
+    <string name="driver_update">DriverUpdate</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
